--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors = None\n",
+    "kindof_neighbors = c\n",
     "kindof_neighbors"
    ]
   },
