--- a/index.ipynb
+++ b/index.ipynb
@@ -190,11 +190,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Argentina']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "kindof_neighbors = countries []\n",
+    "kindof_neighbors = countries [2:3]\n",
     "kindof_neighbors"
    ]
   },
